# dashi

./: Dockerfile  Makefile  docker-compose.yml  mypy.ini  pyproject.toml
dashi/: __init__.py  __main__.py  model.py
dashi/endpoints/: dashboards.py  root.py
database/: 02-add-title.sql  03-test-data.sql
tests/: conftest.py
tests/endpoint_tests/: test_dashboards.py  test_root.py
