[tool.poetry]
name = "dashi"
version = "0.1.0"
description = ""
authors = ["mchlrhw <4028654+mchlrhw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-black = "^0.3.7"
pytest-cov = "^2.8.1"
pytest-flake8 = "^1.0.4"
pytest-isort = "^0.3.1"
pytest-mypy = "^0.4.2"
pytest-tornado = "^0.8.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.coverage.run]
branch = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
